--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,8 +5,6 @@ name: CI
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
-  push:
-    branches: [ master ]
   pull_request:
     branches: [ master ]
 
@@ -22,12 +20,15 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
-    # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: echo Hello, world!
-
     # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
+    - name: check new json
       run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+        ./checkpr
+
+    - uses: hmarr/auto-approve-action@v2.0.0
+      with:
+        github-token: "${{ secrets.GITHUB_TOKEN }}"
+
+    - uses: maxkomarychev/merge-pal-action@v0.5.1
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
