--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,7 +23,7 @@ jobs:
     # Runs a set of commands using the runners shell
     - name: check new json
       run: |
-        ./checkpr
+        ./checkpr -f config.json
 
     - uses: hmarr/auto-approve-action@v2.0.0
       with:
